--- a/frontend/src/components/styles/LandingPageStyles.css
+++ b/frontend/src/components/styles/LandingPageStyles.css
@@ -1,6 +1,7 @@
+/*
 .landing-root {
-    height: 100vh;
-    width: 100vw;
+    height: fit-content;
+    width: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -43,3 +44,4 @@
     background-color: #0056b3;
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
 }
+*/
