--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,77 +1,84 @@
-/* Allgemeine Einstellungen */
+/* Global Styles */
 body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #333333;
+  margin: 0;
+  font-family: 'Open Sans', sans-serif;
+  background: var(--background-color);
+  color: var(--text-color);
+}
+
+/* Theme Provider */
+.MuiThemeProvider-root {
+  background-color: inherit;
 }
 
 /* Navbar */
 .navbar-root {
-    background-color: #333;
-    color: white;
+  background-color: var(--navbar-bg-color);
+  color: white;
 }
 
 /* Container */
 .container {
-    max-width: 1200px;
-    margin: auto;
-    padding: 0 20px;
+  max-width: 1920px;
+  margin: auto;
+  padding: 0 20px;
 }
 
 /* Dashboard */
 .dashboard {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    gap: 20px;
+  display: grid;
+  width: 100%;
+  grid-template-columns: 1fr 3fr;
+  gap: 20px;
 }
 
-/* Sidebar */
+/* sidebar */
 .sidebar {
-    background-color: #444;
-    color: white;
-    padding: 20px;
+  background-color: var(--sidebar-bg-color);
+  color: white;
+  padding: 20px;
 }
 
 /* Main Content */
 .main-content {
-    padding: 20px;
-}
-
-/* Chart Container */
-.chart-container {
-    background-color: #fff;
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
 }
 
 /* Editor */
 .editor-container {
-    background-color: #fff;
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Chart Container */
+.chart-container {
+  background-color: white;
+  border-radius: 1px;
+  padding: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Buttons */
 .landing-button {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 /* Avatar */
 .avatar {
-    background-color: #666;
+  background-color: #666;
 }
 
 /* Tooltip */
 .tooltip {
-    background-color: #333;
-    color: white;
+  background-color: #333;
+  color: white;
 }
 
 /* 404 Page */
 .not-found {
-    text-align: center;
-    font-size: 2em;
-    padding: 50px;
+  text-align: center;
+  font-size: 2em;
+  padding: 50px;
 }
