--- a/frontend/src/components/drawer/OptionsDrawer/OptionsDrawer.css
+++ b/frontend/src/components/drawer/OptionsDrawer/OptionsDrawer.css
@@ -1,4 +1,3 @@
-
 :root {
     --drawer-height: 100%;
     --drawer-width: 100%;
@@ -20,9 +19,12 @@
 
 .drawer {
     width: var(--drawer-width);
-
 }
 
+.left {
+    left: 0;
+    width: 20%;
+}
 .section {
     padding: var(--section-padding);
     margin-bottom: var(--section-margin-bottom);
