--- a/frontend/src/pages/dashboard/Dashboard.css
+++ b/frontend/src/pages/dashboard/Dashboard.css
@@ -1,26 +1,28 @@
 .dashboard-container {
-    margin-top: calc(var(--appbar-height) - var(--margin-small));
+    margin-top: calc(var(--appbar-height) + 15px);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    min-height: calc(100vh - var(--appbar-height));
+    width: 100%;
 }
 
-.chart-grid {
+.dashboard-grid-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.charts-grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* Vier Karten pro Reihe für sehr große Bildschirme */
     grid-gap: 20px;
     width: 100%;
+    max-width: 100vw;
     padding: 10px 0;
-}
-
-.pagination-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    width: 100%;
-    padding: 10px 0;
+    grid-template-columns: repeat(4, 1fr);
 }
 
 @media screen and (max-width: 480px) {
@@ -31,20 +33,20 @@
 
 @media screen and (max-width: 768px) {
     .chart-grid {
-        grid-template-columns: 1fr; /* Eine Karte pro Reihe für sehr kleine Bildschirme */
+        grid-template-columns: 1fr; /* Eine Karte pro Reihe für kleine Bildschirme */
     }
 }
 
 
 @media screen and (max-width: 1280px) {
     .chart-grid {
-        grid-template-columns: repeat(2, 1fr); /* Zwei Karten pro Reihe für kleinere Bildschirme */
+        grid-template-columns: repeat(3, 1fr); /* Zwei Karten pro Reihe für kleinere Bildschirme */
     }
 }
 
 @media screen and (max-width: 1440px) {
     .chart-grid {
-        grid-template-columns: repeat(3, 1fr); /* Drei Karten pro Reihe für mittlere Bildschirme */
+        grid-template-columns: repeat(4, 1fr); /* Drei Karten pro Reihe für mittlere Bildschirme */
     }
 }
 
