--- a/frontend/src/pages/settings/SettingsPage.css
+++ b/frontend/src/pages/settings/SettingsPage.css
@@ -1,24 +1,52 @@
-section {
-    margin: 20px;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-}
-
-h2 {
-    margin-bottom: 20px;
-}
-
-form {
+.settings-page-root {
+    font: var(--font-size-large) var(--font-family);
+    display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    min-height: calc(100vh - var(--appbar-height) - var(--margin-xlarge));
+
 }
 
-label {
-    margin-bottom: 10px;
+.user-profile-settings-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-input {
-    margin-bottom: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
+.user-profile-settings {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.notification-settings-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.notification-settings {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.security-settings-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.security-settings {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
 }
