--- a/frontend/src/components/tables/ReactGridTable.css
+++ b/frontend/src/components/tables/ReactGridTable.css
@@ -1,10 +1,9 @@
 @import '../../../node_modules/@silevis/reactgrid/styles.css';
-:root {
-    --text-color-light: #000000; /* Schwarz für Light Mode */
-    --background-color-light: #FFFFFF; /* Weiß für Light Mode */
 
-    --text-color-dark: #FFFFFF; /* Weiß für Dark Mode */
-    --background-color-dark: #333333; /* Dunkelgrau für Dark Mode */
+:root {
+    --background-color-light: var(--background-color-light);
+
+    --background-color-dark: var(--background-color-dark);
 }
 
 .react-grid-table-container.light-mode {
@@ -52,46 +51,9 @@
 }
 
 .react-grid-table {
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: var(--margin-medium) -10px;
+    margin-bottom: 0;
 }
-
-/* 480px */
-@media screen and (max-width: 480px) {
-    .react-grid-table {
-        width: 100%;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .react-grid-table {
-        width: 100%;
-    }
-}
-
-/* 1280px */
-@media screen and (max-width: 1280px) {
-    .react-grid-table {
-        width: 100%;
-    }
-}
-
-/* 1440px */
-@media screen and (max-width: 1440px) {
-    .react-grid-table {
-        width: 100%;
-    }
-}
-
-/* 1920px */
-@media screen and (min-width: 1920px) {
-    .react-grid-table {
-        width: 100%;
-
-    }
-}
-
