Remove HeadBar.jsx, package.json, and package-lock.json files
The HeadBar.jsx file has been deleted as it's no longer necessary for the application's layout. Additionally, the package.json and package-lock.json files have also been removed from ChartService directory. These removals are a part of project cleanup and restructuring.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,7 +12,7 @@
 }
 
 .appbar {
-    z-index: 1000; /* Sicherstellung, dass AppBar über allem anderen liegt */
+    z-index: 1000; /* Sicherstellung, dass AppBarComponent über allem anderen liegt */
 }
 
 .app-header {
