--- a/frontend/src/pages/editor/Editor.css
+++ b/frontend/src/pages/editor/Editor.css
@@ -1,8 +1,8 @@
 .editor-root {
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    width: 100%;
+    height: calc(100vh - 80px);
+    width: calc(100% - 32px);
 }
 
 .editor-container {
